{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 11,
  "lineage": "96e672ff-93fe-3604-eb82-c81024e16974",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767398152502:internet-gateway/igw-0ecfb9b8495d79159",
            "id": "igw-0ecfb9b8495d79159",
            "owner_id": "767398152502",
            "tags": {
              "Name": "Project-IGW"
            },
            "tags_all": {
              "Name": "Project-IGW"
            },
            "vpc_id": "vpc-06cc87ec830edd682"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ecfb9b8495d79159",
            "id": "r-rtb-07cc40e366940fe821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07cc40e366940fe82",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_route_table.public_route_table",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767398152502:route-table/rtb-07cc40e366940fe82",
            "id": "rtb-07cc40e366940fe82",
            "owner_id": "767398152502",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cc87ec830edd682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a627c5837c378ee",
            "route_table_id": "rtb-07cc40e366940fe82",
            "subnet_id": "subnet-0eb165f8b4ed4f39c"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.project_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c22cf321afc9fef9",
            "route_table_id": "rtb-07cc40e366940fe82",
            "subnet_id": "subnet-0320208ce053a8121"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.project_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767398152502:subnet/subnet-0eb165f8b4ed4f39c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb165f8b4ed4f39c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398152502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project-Public-Subnet-$(count.index+1)",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Project-Public-Subnet-$(count.index+1)",
              "Type": "Public"
            },
            "vpc_id": "vpc-06cc87ec830edd682"
          },
          "dependencies": [
            "aws_vpc.project_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767398152502:subnet/subnet-0320208ce053a8121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0320208ce053a8121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398152502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project-Public-Subnet-$(count.index+1)",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Project-Public-Subnet-$(count.index+1)",
              "Type": "Public"
            },
            "vpc_id": "vpc-06cc87ec830edd682"
          },
          "dependencies": [
            "aws_vpc.project_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767398152502:vpc/vpc-06cc87ec830edd682",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/25",
            "default_network_acl_id": "acl-0c4b9707fa5ec1233",
            "default_route_table_id": "rtb-021b1845e67883c9d",
            "default_security_group_id": "sg-0baf964c701be9ab6",
            "dhcp_options_id": "dopt-0790922ab24adaf72",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cc87ec830edd682",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021b1845e67883c9d",
            "owner_id": "767398152502",
            "tags": {
              "Name": "Project-VPC"
            },
            "tags_all": {
              "Name": "Project-VPC"
            }
          }
        }
      ]
    }
  ]
}